deploy: ca9a2e7b7c8f087dbf69289f3fc9841a8b8fb51c

--- a/zrok-private-access/compose.yml
+++ b/zrok-private-access/compose.yml
@@ -17,7 +17,7 @@ services:
     volumes:
       - zrok_env:/mnt
     environment:
-      STATE_DIRECTORY: /mnt
+      HOME: /mnt
       ZROK_ENABLE_TOKEN:
       ZROK_API_ENDPOINT:
       ZROK_ENVIRONMENT_NAME: docker-private-access
